# Health-Data-Hub

./: .replit  NovaArc_Health_Features_Guide.docx  README.md  package-lock.json  package.json  pyproject.toml  replit.md  start.bat  start.sh
.agents/: agent_assets_metadata.toml
.github/workflows/: deploy.yml
.local/state/replit/: log-query.db  log-query.db-shm  log-query.db-wal
.local/state/scribe/: scribe.db-shm  scribe.db-wal
.local/state/workflow-logs/2pUAA4x8Ierx9FeAOSsSt/: metadata.json  start_application.shell.exec.0
.local/state/workflow-logs/6QRmwfAsAWEodgzXixaRg/: metadata.json  (+1 more)
attached_assets/: Copy_RI_1772861462687.pptx  Pasted-Enhance-the-current-system-with-the-following-product-a_1772881590248.txt  Pasted-ROLE-You-are-a-senior-healthcare-software-architect-and_1772772382420.txt
backend/: database.py  main.py  models.py  rcm_ar.db  schemas.py  seed_data.py
backend/routes/: ai_chat.py  analytics.py  auth.py  claims.py  edi.py  queues.py  rpa.py  upload.py
backend/services/: ai_agents.py  appeal_generator.py  edi_engine.py  risk_engine.py  rpa_engine.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: Layout.jsx  Sidebar.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: AdminSettings.jsx  ClaimDetail.jsx  ClaimInventory.jsx  ClaimLifecycle.jsx  Dashboard.jsx  DenialAdvisor.jsx  DenialAnalytics.jsx  EDIHub.jsx  FileUpload.jsx  Login.jsx  RPABots.jsx  WorkQueues.jsx  WorkflowModules.jsx
(+34 files in other folders)
